// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. caption with container and text styles 1`] = `
<style>
.S1 {
  font-family: GillSansMTStd-Medium;
  font-size: 13px;
  font-weight: inherit;
  line-height: 17px;
  padding-top: 0px;
}

.S2 {
  font-family: GillSansMTStd-Medium;
  font-size: 9px;
  font-weight: 400;
  letter-spacing: 1px;
  line-height: 17px;
  padding-top: 0px;
}

.S3 {
  padding-top: 10px;
}

.S4 {
  padding-top: 0px;
}

.IS1 {
  color: rgba(0,128,0,1.00);
}

.IS2 {
  color: rgba(0,128,0,1.00);
}

.IS3 {
  background-color: rgba(255,0,0,1.00);
}
</style>

<div
  className="S4"
>
  <div
    className="IS3 S3"
  >
    <div
      className="IS1 S1"
    >
      Some caption text goes in here
    </div>
    <div
      className="IS2 S2"
    >
      JUST CREDITS
    </div>
  </div>
</div>
`;

exports[`2. caption with container, caption, and credit styles 1`] = `
<style>
.S1 {
  font-family: GillSansMTStd-Medium;
  font-weight: inherit;
  line-height: 17px;
  padding-top: 0px;
}

.S2 {
  font-family: GillSansMTStd-Medium;
  font-weight: 400;
  letter-spacing: 1px;
  line-height: 17px;
  padding-top: 0px;
}

.S3 {
  padding-top: 10px;
}

.S4 {
  padding-top: 0px;
}

.IS1 {
  color: rgba(0,128,0,1.00);
  font-size: 10px;
}

.IS2 {
  color: rgba(0,128,0,1.00);
  font-size: 8px;
}

.IS3 {
  background-color: rgba(255,0,0,1.00);
}
</style>

<div
  className="S4"
>
  <div
    className="IS3 S3"
  >
    <div
      className="IS1 S1"
    >
      Some caption text goes in here
    </div>
    <div
      className="IS2 S2"
    >
      JUST CREDITS
    </div>
  </div>
</div>
`;

exports[`3. caption with only container styles 1`] = `
<style>
.S1 {
  color: rgba(105,105,105,1.00);
  font-family: GillSansMTStd-Medium;
  font-size: 13px;
  font-weight: inherit;
  line-height: 17px;
  padding-top: 0px;
}

.S2 {
  color: rgba(51,51,51,1.00);
  font-family: GillSansMTStd-Medium;
  font-size: 9px;
  font-weight: 400;
  letter-spacing: 1px;
  line-height: 17px;
  padding-top: 0px;
}

.S3 {
  padding-top: 10px;
}

.S4 {
  padding-top: 0px;
}

.IS1 {
  background-color: rgba(0,0,255,1.00);
}
</style>

<div
  className="S4"
>
  <div
    className="IS1 S3"
  >
    <div
      className="S1"
    >
      Some caption text goes in here
    </div>
    <div
      className="S2"
    >
      JUST CREDITS
    </div>
  </div>
</div>
`;
